@@ -30,6 +30,7 @@ Date:
         - Fix loading recent versions of K2.
         - Remove incorrect speed bonus for quality mining drills.
         - Show beacons added by the per-page settings on each row they affect.
+        - Fix the temperature overlay for fluids with non-64px icons.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.16.0
 Date: October 24th 2025
